--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -4,40 +4,48 @@
   </div>
   <div class ="row">
     <%= form_with model: @order,url:public_confirm_path,local:true do |f| %>
-      <div>
-        <storng>支払方法</storng>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
-
-        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
+      <div style="margin-top:10px">
+        <strong>支払方法</strong>
+        <div>
+          <%= f.radio_button :payment_method, Order.payment_methods.key(0) ,checked: true %>
+          <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+        </div>
+        <div>
+          <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+          <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
+        </div>
       </div>
-      <div>
+      <div style="margin-top:10px">
         <!-- address_number と定義して1～3の番号を confilm に送ります -->
         <strong>お届け先</strong>
-        <!-- customer テーブルに登録されている住所の場合 -->
-        <%= f.radio_button :address_number, 1 %>
-        <%= f.label :address_number_1, "ご自身の住所" %>
-        <%= current_customer.address %>
+        <div>
+          <!-- customer テーブルに登録されている住所の場合 -->
+          <%= f.radio_button :address_number, 1 ,checked: true %>
+          <%= f.label :address_number_1, "ご自身の住所" %><br>
+          <%= current_customer.address %><br>
+          <%= current_customer.full_name %>
+        </div>
+        <div>
+          <!-- 登録されたaddressから選んでもらう場合 -->
+          <%= f.radio_button :address_number, 2 %>
+          <%= f.label :address_number_2, "登録済住所から選択" %><br>
+          <!--registered として current_customer.address.all で取得した id を送る。選択するのは address-->
+          <%= f.collection_select(:registered, current_customer.addresses, :id, :address) %>
+        </div>
+        <div>
+          <!-- 新しい住所を追加する場合 -->
+          <%= f.radio_button :address_number, 3 %>
+          <%= f.label :address_number_3, "新しいお届け先" %><br>
 
-        <!-- 登録されたaddressから選んでもらう場合 -->
-        <%= f.radio_button :address_number, 2 %>
-        <%= f.label :address_number_2, "登録済住所から選択" %>
-         <!--registered として current_customer.address.all で取得した id を送る。選択するのは address-->
-        <%= f.collection_select(:registered, current_customer.addresses, :id, :address) %>
+          <%= f.label :postal_code, "郵便番号" %>
+          <%= f.text_field :postal_code %><br>
 
-        <!-- 新しい住所を追加する場合 -->
-        <%= f.radio_button :address_number, 3 %>
-        <%= f.label :address_number_3, "新しいお届け先" %>
+          <%= f.label :address, "住所" %>
+          <%= f.text_field :address %><br>
 
-        <%= f.label :postal_code, "郵便番号" %>
-        <%= f.text_field :postal_code %>
-
-        <%= f.label :address, "住所" %>
-        <%= f.text_field :address %>
-
-        <%= f.label :address_name, "宛名" %>
-        <%= f.text_field :address_name %>
+          <%= f.label :address_name, "宛名" %>
+          <%= f.text_field :address_name %>
+        </div>
       </div>
       <!-- 選んだデータを送ります -->
       <div class="row mt-5 d-flex justify-content-center">
