--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -5,8 +5,8 @@
 <!--<% @cart_items.each do |cart| %>-->
 <!--  <%= cart.item.name %> <!-- 商品名 -->-->
 <!--  <%= (cart.item.price).to_s(:delimited) %>　<!-- 金額 -->-->
-<!--  <%= cart.quantity %> <!-- 個数 -->-->
-<!--  <%= (cart.item.price*cart.quantity).to_s(:delimited) %> <!-- 小計 -->-->
+<!--  <%= cart.amount %> <!-- 個数 -->-->
+<!--  <%= (cart.item.price*cart.amount).to_s(:delimited) %> <!-- 小計 -->-->
 <!--<% end %>-->
 <!--<p>ご請求金額</p>-->
 <!--<%= @total.to_s(:delimited) %> <!-- お買い物の合計金額 -->-->
@@ -14,7 +14,7 @@
 <!--<%= @order.address %>-->
 
 <!-- ユーザーには注文確定ボタンだけ表示します -->
-<!--<%= form_with model: @order, url: create へのパス, local: true do |f| %>-->
+<!--<%= form_with model: @order, url: public_orders_path ,method: :post, local: true do |f| %>-->
 <!--  <%= f.hidden_field :name %>-->
 <!--  <%= f.hidden_field :address %>-->
 <!--  <%= f.hidden_field :total_price, value: @total %>-->
