--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div class="row">
         <div class ="col-9">
-            <table class="table" style="border-collapse: collapse;">
+            <table class="table table-bordered border-dark" style="border-collapse: collapse;">
                 <thead class="bg-light">
                     <th>商品名</th>
                     <th>単価（税込）</th>
@@ -23,7 +23,7 @@
             </table>
         </div>
         <div class ="col-3">
-            <table class="table" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+            <table class="table table-bordered border-dark" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
                 <thead class="bg-light">
                     <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">送料</th>
                     <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品合計</th>
@@ -38,12 +38,21 @@
             </table>
         </div>
     </div>
-    <p><strong>支払方法</strong></p>
-    <%= @order.payment_method %>
 
-    <p><strong>お届け先</strong></p>
-    <%= @order.address %>
-
+    <div class ="row">
+        <div class="col-11 offset-1">
+            <table class ="table table-borderless">
+                <tr>
+                    <th class ="col-1">支払方法</th><br>
+                    <td class="col-10" ><%= @order.payment_method %></td>
+                </tr>
+                <tr>
+                    <th class="col-1">お届け先</th><br>
+                    <td class="col-10"><%= @order.address %></td>
+                </tr>
+            </table>
+        </div>
+    </div>
     <div class ="row mt-5 d-flex justify-content-center">
         <!-- ユーザーには注文確定ボタンだけ表示します -->
         <%= form_with model: @order, url: public_orders_path ,method: :post, local: true do |f| %>
