--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -44,7 +44,7 @@
             <table class ="table table-borderless">
                 <tr>
                     <th class ="col-1">支払方法</th><br>
-                    <td class="col-10" ><%= @order.payment_method %></td>
+                    <td class="col-10"><%= @order.payment_method_i18n %></td>
                 </tr>
                 <tr>
                     <th class="col-1">お届け先</th><br>
@@ -56,9 +56,14 @@
     <div class ="row mt-5 d-flex justify-content-center">
         <!-- ユーザーには注文確定ボタンだけ表示します -->
         <%= form_with model: @order, url: public_orders_path ,method: :post, local: true do |f| %>
-          <%= f.hidden_field :name %>
-          <%= f.hidden_field :address %>
-          <%= f.hidden_field :total_price, value: @total %>
+          <%= f.hidden_field :name , value: @order.name %>
+          <%= f.hidden_field :postal_code ,value: @order.postal_code%>
+          <%= f.hidden_field :address ,value: @order.address%>
+            <%= f.hidden_field :postage,  value: 800 %>
+            <%= f.hidden_field :payment_method ,value: @order.payment_method %>
+            <%= f.hidden_field :price, value: @payment_price  %>
+             <%= f.hidden_field :customer_id, value: @order.customer_id %>
+             <%= f.hidden_field :status, value:"waiting_for_payment" %>
           <%= f.submit "注文を確定する",class:"btn btn-md btn-success" %>
         <% end %>
     </div>
