--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,7 +1,7 @@
-<div class="container text-center" style="margin:100px">
+<div class="container" style="margin:300px">
   <div class="row">
     <div class="col d-flex flex-wrap justify-content-center">
-      <P>ご注文ありがとうございました！</P>
+      <h3>ご注文ありがとうございました！</h3>
     </div>
   </div>
 </div>
