--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class="container" style="margin:20px">
+  <div class="row" style="margin:20px">
+    <h5 class="bg-light">注文履歴一覧</h5>
+  </div>
+  <div class="row">
+    <table class="table table-bordered border-bg" style="margin:20px">
+      <thead class="bg-light">
+        <th>注文日</th>
+        <th>配送先</th>
+        <th>注文商品</th>
+        <th>支払金額</th>
+        <th>ステータス</th>
+        <th>注文詳細</th>
+      </thead>
+      <!--%　注文履歴.each do |注文履歴| %-->
+        <tbody>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td><%#= link_to "表示する",public_order_path,class:"btn btn-sm btn-primary" %></td>
+        </tbody>
+      <!--% end %-->
+    </table>
+  </div>
+</div>
