--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -30,7 +30,7 @@
                     </td>
                     <td><%= cart_item.sum_of_price.to_s(:delimited) %></td>
                     <td>
-                        <%= link_to "削除する" ,public_cart_item_path(cart_item.id), method: :delete, "data-confilm" => "本当にカートから削除しますか？" ,class:'btn btn-md btn-dander' %>
+                        <%= link_to "削除する" ,public_cart_item_path(cart_item.id), method: :delete, "data-confilm" => "本当にカートから削除しますか？" ,class:'btn btn-md btn-danger' %>
                     </td>
                 </tbody>
                     <!--合計金額を計算-->
@@ -39,11 +39,11 @@
             <% end %>
         </table>
     </div>
-    <div class ="row">
-        <div class ="col-6 text-left">
+    <div class ="row" style="margin-top:20px">
+        <div class ="col-9 text-left">
             <%= link_to "買い物を続ける",root_path,class:'btn btn-sm btn-primary' %>
         </div>
-        <div class ="col-6 text-right">
+        <div class ="col-3 text-right">
             <table class ="table table-bordered border-dark">
                 <th class ="bg-light text-left">合計金額</th>
                 <td><%= @sum_price.to_s(:delimited) %></td>
