--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,50 +1,50 @@
-<div class = "container" style="margin:20px">
-  <div class = "row">
-    <h5 class = "bg-light">マイページ</h5>
+<div class= "container" style="margin:20px">
+  <div class= "row mt-5 d-flex justify-content-center">
+    <h5 class= "bg-light">マイページ</h5>
   </div>
-  <div class = "row">
+  <div class= "row">
     <table class="table table-borderless">
       <tr>
-        <th>登録情報</th>
-        <td><%= link_to "編集する",edit_public_customers_path,class: 'btn btn-md btn-success' %></td>
+        <th class="col-1">登録情報</th>
+        <td class="col-11"><%= link_to "編集する",edit_public_customers_path,class: 'btn btn-md btn-success' %></td>
       </tr>
     </table>
   </div>
-  <table class ="table table-bordered border-dark">
+  <table class="table table-bordered border-dark">
     <tr>
-      <th class ="bg-light">氏名</th>
-      <td><%= @customerf.full_name %></td>
+      <th class="col-2 bg-light">氏名</th>
+      <td class="col-10"><%= @customerf.full_name %></td>
     </tr>
     <tr>
-      <th class ="bg-light">カナ</th>
-      <td><%= @customerf.full_name_kana %></td>
+      <th class="col-2 bg-light">カナ</th>
+      <td class="col-10"><%= @customerf.full_name_kana %></td>
     </tr>
     <tr>
-      <th class ="bg-light">郵便番号</th>
-      <td><%= @customerf.postal_code %></td>
+      <th class="col-2 bg-light">郵便番号</th>
+      <td class="col-10"><%= @customerf.postal_code %></td>
     </tr>
     <tr>
-      <th class ="bg-light">住所</th>
-      <td><%= @customerf.telephone_number %></td>
+      <th class="col-2 bg-light">住所</th>
+      <td class="col-10"><%= @customerf.telephone_number %></td>
     </tr>
     <tr>
-      <th class ="bg-light">電話番号</th>
-      <td><%= @customerf.telephone_number %></td>
+      <th class="col-2 bg-light">電話番号</th>
+      <td class="col-10"><%= @customerf.telephone_number %></td>
     </tr>
     <tr>
-      <th class ="bg-light">メールアドレス</th>
-      <td><%= @customerf.email %></td>
+      <th class="col-2 bg-light">メールアドレス</th>
+      <td class="col-10"><%= @customerf.email %></td>
     </tr>
   </table>
-  <div class ="row">
+  <div class="row">
     <table class="table table-borderless">
       <tr>
-        <th>配送先</th>
-        <td><%= link_to "一覧を見る",public_addresses_path(@customerf.id),class: 'btn btn-md btn-primary' %></td>
+        <th class="col-1">配送先</th>
+        <td class="col-11"><%= link_to "一覧を見る",public_addresses_path(@customerf.id),class: 'btn btn-md btn-primary' %></td>
       </tr>
       <tr>
-        <th>注文履歴</th>
-        <td><%= link_to "一覧を見る",public_orders_path(@customerf.id),class: 'btn btn-md btn-primary' %></td>
+        <th class="col-1">注文履歴</th>
+        <td class="col-11"><%= link_to "一覧を見る",public_orders_path(@customerf.id),class: 'btn btn-md btn-primary' %></td>
       </tr>
     </table>
   </div>
