--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,4 +1,4 @@
-<div calss ="container-fluid text-center" style ="margin:50px">
+<div calss ="container text-center" style ="margin:50px">
   <div class ="row　mx-auto">
     <div class="col-md-5">
       <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
