--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -12,7 +12,7 @@
         <th>ステータス</th>
         <th>注文詳細</th>
       </thead>
-      <!--%　注文履歴.each do |注文履歴| %-->
+      <!--%　@orders.each do |order| %-->
         <tbody>
           <td></td>
           <td></td>
