--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -14,7 +14,8 @@
       </thead>
       <% @orders.each do |order| %>
         <tbody>
-          <td><%= order.created_at %></td>
+          <!--l（localize）エイリアスメソッド。具体的な日本語化の表示方法は、config/locales/ja.ymlを参照-->
+          <td><%= l order.created_at,format: :long %></td>
           <td><%= order.addresses_display %></td>
           <td>
           <% order.order_details.each do |order_details| %>
