--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,10 +1,10 @@
-<div class = "container">
-    <div class ="row">
-        <h4 class ="bg-light">注文履歴一覧</h4>
-        <table class ="table">
+<div class = "container mx-auto" style="margin:20px">
+    <div class ="row" style="margin:20px">
+        <h5 class ="bg-light">注文履歴一覧</h5>
+        <table class ="table table-bordered border-bg" style="margin:20px">
             <thead class = "bg-light">
                 <tr>
-                    <th>購入履歴</th>
+                    <th>購入日時</th>
                     <th>購入者</th>
                     <th>注文個数</th>
                     <th>注文ステータス</th>
@@ -17,18 +17,23 @@
                     <tr>
                         <td>
                             <!--購入日時を押下することで、注文履歴詳細（更新）画面へ遷移させる-->
-                            <%= link_to admin_order_detail_path do %>
-                                orderテーブルのcreate_at/作成日時を持ってくる。その際注意点あり
+                            <%= link_to admin_order_detail_path(order.id),method: :patch do %>
+                                <%= l order.created_at,format: :long %>
                             <% end %>
                         </td>
-                        <td>購入者＝管理者側でいう会員氏名</td>
-                        <td></td>
-                        <td>staus/注文ステータス情報を持ってくる。その際enumの設定と文字変換機能を実装すること</td>
+                        <td><%= order.customer.full_name %></td>
+                        <% order.order_details.each do |order_details| %>
+                            <% @total_amount +=(order_details.amount) %>
+                        <% end %>
+                        <td><%= @total_amount %></td>
+                        <td><%= order.status_i18n %></td>
                     </tr>
                 <!--<% end %>-->
             </tbody>
         </table>
+    </div>
+    <div class ="row mt-5 d-flex justify-content-center">
         <!--↓ページネーションを表示させるための記述。詳細設定は、app/view/kaminariを参照-->
-        <!--%= paginate @orders %-->
+        <%= paginate @orders %>
     </div>
 </div>
