--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class = "container text-center" style="margin-top:30px">
    <div class = "row">
-    <div class ="col-8 mx-auto">
+    <div class ="col-8 mx-auto" style="margin:60px">
       ようこそ、ながのCAKEへ！<br>
       このサイトは、ケーキ販売のECサイトになります。<br>
       会員でない方も商品閲覧はできますが、<br>
@@ -9,7 +9,7 @@
 
   </div>
   <div class = "row col-8 mx-auto" style="margin-top:30px">
-     <h5 class = "bg-light">新着商品</h5>
+     <h4 class = "bg-light">新着商品</h4>
   </div>
   <div class = "row col-8 mx-auto">
     <!--|item|→ローカル変数を指している。格納データを１つずつ持ってきている。-->
