--- a/app/views/admin/orders/update.html.erb
+++ b/app/views/admin/orders/update.html.erb
@@ -1,2 +1,28 @@
-<h1>Admin::Orders#update</h1>
-<p>Find me in app/views/admin/orders/update.html.erb</p>
+<div class="container" style="margin:30px">
+  <div class="row">
+    <h5 class="col-3 bg-light">注文履歴詳細</h5>
+  </div>
+  <div class="row" style="margin-top:20px">
+    <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+      <thead class="bg-light">
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">購入者</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">注文日</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">配送先</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">支払方法</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">注文ステータス</th>
+      </thead>
+      <tbody>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @orderf.customer.full_name %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= l @orderf.created_at ,format: :long %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @orderf.addresses_display %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @orderf.payment_method_i18n %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+          <%= form_with model: order,url:admin_order_path(order),local:true,method: :patch do |f| %>
+            <%= f.select :payment_method_i18n,*[注文ステータスを記載] %>
+            <%= f.submit "更新", class:'btn btn-sm btn-success' %>
+          <% end %>
+        </td>
+      </tbody>
+    </table>
+  </div>
+</div>
