--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,15 +1,17 @@
-<div class = "container text-center" style="margin-top:50px">
-  <div class = "row">
-    <div class ="col-8 mx-auto">
-      <h1><storong>About</storong></h1>
-      <p>
+<div class = "container mx-auto" style="margin-top:30px">
+  <div class = "row mx-auto text-align:center" style="margin:60px">
+    <!--<div class ="col-8 mx-auto">-->
+      <h1 style="font-size:100px"><storong>About</storong></h1>
+  </div>
+  <div class="row mx-auto" style="margin-top:20px">
+      <span style="font-size:30px">
         ながのCAKEは全国発送可能なケーキ屋さんです。<br>
         お子様からお年寄りの方までお召し上がりいただけるよう、<br>
         様々なバリエーションをご用意しております。<br>
         また、全国へ発送可能ですので、「いつ」でも「どこ」でもご注文いただけます。<br>
         ぜひご注文ください。
-      </p>
-    </div>
+      </span>
+    <!--</div>-->
   </div>
 </div>
 
