--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,46 +1,40 @@
-<div class = "container">
-    <div class = "row">
+<div class = "container mx-auto" style="margin:20px">
+    <div class = "row mt-5 d-flex" style="margin:20px">
       <h5 class ="bg-light">商品詳細</h5>
     </div>
-    <div class = "row">
-        <div>
+    <div class = "row mt-5 d-flex" style="margin:50px">
+        <div class="col-2">
             <!--get_item_image(width, height)は、app/assets/models/item.rbに定義している-->
             <%= image_tag @itemf.get_item_image(200,200) %>
         </div>
-    </div>
-    <div class = "row">
-        <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-            <table>
-                <tr>
-                    <th>商品名</th>
-                    <th><%= @itemf.name %></td>
-                </tr>
-                <tr>
-                    <th>商品説明</th>
-                    <td><%= @itemf.introduction %></td>
-                </tr>
-                <tr>
-                    <th>ジャンル</th>
-                    <td><%= @itemf.genre.name %></td>
-                </tr>
-                <tr>
-                    <th>税込価格<br>(税抜価格)</th>
-                    <td>
+        <div class = "col-10 mx-auto">
+            <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+                <thead>
+                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品名</th>
+                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品説明</th>
+                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">ジャンル</th>
+                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">税込価格<br>(税抜価格)</th>
+                    <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">販売ステータス</th>
+                </thead>
+                <tbody>
+                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @itemf.name %></td>
+                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @itemf.introduction %></td>
+                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @itemf.genre.name %></td>
+                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
                         <!--to_s(:delimited):3桁ごとにカンマ区切りで表示させるメソッド-->
                         <%= @itemf.add_tax_price.to_s(:delimited) %>(<%= @itemf.price.to_s(:delimited) %>)円
                     </td>
-                </tr>
-                <tr>
-                    <th>販売ステータス</th>
-                    <td>
+                    <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
                         <% if @itemf.is_active == false %>
                             <div class = "text-success">販売中</div>
                         <% else %>
                             <div class = "text-muted">売切れ</div>
                         <% end %>
                     </td>
-                </tr>
-                <td><%= link_to "編集する",edit_admin_item_path(@itemf.id),class: 'btn btn-md btn-success' %></td>
+                    <td class ="row mt-5 d-flex justify-content-center" style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+                        <%= link_to "編集する",edit_admin_item_path(@itemf.id),class: 'btn btn-md btn-success' %>
+                    </td>
+                </tbody>
             </table>
         </div>
     </div>
