--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,7 +1,7 @@
 <p id = "notice"></p>
 <div class = "container mx-auto" style="margin:30px">
   <div class = "row" style="margin:20px">
-    <h5 class ="bg-light">商品編集</h5>
+    <h5 class ="bg-light text-left">商品編集</h5>
   </div>
   <div class = "row">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
