--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,40 +1,40 @@
-<div class = "container">
-  <div class = "row">
-    <h4 class="bg-light">会員一覧</h4>
-
-    <table class = "table">
-      <thead class = "bg-light">
-        <tr>
+<div class = "container mx-auto" style="margin:30px">
+  <div class = "row" style="margin:20px">
+    <h5 class="bg-light text-left">会員一覧</h5>
+  </div>
+  <div class="row mx-auto" style="margin:20px">
+    <div class = "col-sm-12 col-md-10 col-lg-8 px-5 px-sm-0">
+      <table class="table table-bordered border-bg">
+        <thead class="bg-light">
           <th>会員ID</th>
           <th>氏名</th>
           <th>メールアドレス</th>
           <th>ステータス</th>
-          <th colspan = "4"></th>
-        </tr>
-      </thead>
-      <tbody>
+        </thead>
         <% @customers.each do |customer| %>
-          <tr>
-            <td><%= customer.id %></td>
-            <td>
-              <!--会員のフルネームを押下して会員詳細ページへ飛ばす-->
-              <%= link_to admin_customer_path(customer.id) do %>
-                <!--full_nameは、app/models/customers.rbで定義している-->
-                <%= customer.full_name %>
-              <% end %>
-            </td>
-            <td><%= customer.email %></td>
-            <td>
-              <% if customer.is_deleted == false %>
-                <div class = "text-success">有効</div>
-              <% else %>
-                <div class = "text-muted">退会</div>
-              <% end %>
-            </td>
-          </tr>
+        <tbody>
+          <td><%= customer.id %></td>
+          <td>
+            <!--会員のフルネームを押下して会員詳細ページへ飛ばす-->
+            <%= link_to admin_customer_path(customer.id) do %>
+              <!--full_nameは、app/models/customers.rbで定義している-->
+              <%= customer.full_name %>
+            <% end %>
+          </td>
+          <td><%= customer.email %></td>
+          <td>
+            <% if customer.is_deleted == false %>
+              <div class = "text-success">有効</div>
+            <% else %>
+              <div class = "text-muted">退会</div>
+            <% end %>
+          </td>
+        </tbody>
         <% end %>
-      </tbody>
-    </table>
+      </table>
+    </div>
+  </div>
+  <div class ="row mt-5 d-flex justify-content-center">
     <!--↓ページネーションを表示させるための記述-->
     <%= paginate @customers %>
   </div>
