--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,55 +1,43 @@
-<div class = "container">
-  <div class = "row">
+<div class="container" style="margin:30px">
+  <div class="row mx-auto" style="margin:30px">
+    <h5 class="col-3 bg-light"><%= @customerf.full_name %>さんの会員詳細</h5>
+  </div>
+  <div class="row">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h5 class = "bg-light"><%= @customerf.full_name %>さんの会員詳細</h5>
-
-      <table>
-        <tr>
-          <th>会員ID</th>
-          <td><%= @customerf.id %></td>
-        </tr>
-        <tr>
-          <th>氏名</th>
-          <!--姓（last_name）と名（first_name）の間に空白を入れる記述-->
-          <td><%= @customerf.last_name + " " + @customerf.first_name %></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th>フリガナ</th>
-          <!--フリガナ姓（last_name_kana）とフリガナ名（first_name_kana）の間に空白を入れる記述-->
-          <td><%= @customerf.last_name_kana + " " + @customerf.first_name_kana %></td>
-        </tr>
-        <tr>
-          <th>郵便番号</th>
-          <td><%= @customerf.postal_code %></td>
-        </tr>
-        <tr>
-          <th>住所</th>
-          <td><%= @customerf.address %></td>
-        </tr>
-        <tr>
-          <th>電話番号</th>
-          <td><%= @customerf.telephone_number %></td>
-        </tr>
-        <tr>
-          <th>メールアドレス</th>
-          <td><%= @customerf.email %></td>
-        </tr>
-        <tr>
-          <th>会員ステータス</th>
-          <td>
-            <% if @customerf.is_deleted == false %>
-              <div class = "text-success">有効</div>
-            <% else %>
-              <div class = "text-muted">退会</div>
-            <% end %>
-          </td>
-        </tr>
-        <tr>
-          <td><%= link_to "編集する",edit_admin_customer_path(@customerf.id),class: 'btn btn-md btn-success' %></td>
-          <td><%= link_to "注文一覧を見る",admin_root_path,class: 'btn btn-md btn-primary' %></td>
-        </tr>
+    <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+      <thead class="col-3">
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">会員ID</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">氏名</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">フリガナ</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">郵便番号</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">住所</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">電話番号</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">メールアドレス</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">会員ステータス</th>
+      </thead>
+      <tbody class="col-9">
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.id %></td>
+        <!--姓（last_name）と名（first_name）の間に空白を入れる記述-->
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.last_name + " " + @customerf.first_name %></td>
+        <!--フリガナ姓（last_name_kana）とフリガナ名（first_name_kana）の間に空白を入れる記述-->
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.last_name_kana + " " + @customerf.first_name_kana %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.postal_code %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.address %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.telephone_number %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @customerf.email %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+          <% if @customerf.is_deleted == false %>
+            <div class = "text-success">有効</div>
+          <% else %>
+            <div class = "text-muted">退会</div>
+          <% end %>
+        </td>
+      </tbody>
     </table>
     </div>
+  </div>
+  <div class ="row mt-5 d-flex justify-content-center">
+    <div class="col-2"><%= link_to "編集する",edit_admin_customer_path(@customerf.id),class: 'btn btn-md btn-success' %></div>
+    <div class="col-2"><%= link_to "注文一覧を見る",admin_root_path,class: 'btn btn-md btn-primary' %></div>
   </div>
 </div>
