--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,23 +1,72 @@
-<div class = "container">
-  <div class = "row" style="margin-top:20px">
-    <h4 class = "bg-light"><%=@orderf.customer.full_name %>さんの注文履歴</h4>
-    <%= link_to "遷移テスト",admin_order_path(@orderf),method: :patch %>
+<div class="container" style="margin:30px">
+  <div class="row">
+    <h5 class="col-3 bg-light">注文履歴詳細</h5>
   </div>
-  <table class="table table-bordered border-bg offset-1" style="margin:20px" >
-    <thead class="bg-light">
-      <th>購入日時</th>
-      <th>注文個数</th>
-      <th>注文ステータス</th>
-    </thead>
-    <tbody>
-      <td><%= l @orderf.created_at,format: :long %></td>
-      <% @orderf.order_details.each do |order_details| %>
-        <% @total_amount +=(order_details.amount) %>
+  <div class="row" style="margin-top:20px">
+    <table class="table table-borderless" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+      <thead class="bg-light">
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">購入者</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">注文日</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">配送先</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">支払方法</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">注文ステータス</th>
+      </thead>
+      <tbody>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @order.customer.full_name %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= l @order.created_at ,format: :long %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @order.addresses_display %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @order.payment_method_i18n %></td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">
+          <%= form_with model: @order,url:admin_order_path(@order),local:true,method: :patch do |f| %>
+            <%= f.select :status, Order.statuses_i18n.invert, {prompt: false},class:"form-control-sm col-3" %>
+            <%= f.submit "更新", class:'btn btn-sm btn-success' %>
+          <% end %>
+        </td>
+      </tbody>
+    </table>
+  </div>
+  <div class="row" style="margin-top:20px">
+    <div class="col-9">
+    <table class="table table-bordered border-dark">
+      <thead class="bg-light">
+        <th>商品名</th>
+        <th>単価（税込）</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th>制作ステータス</th>
+      </thead>
+      <% @order.order_details.each do |order_details| %>
+      <tbody>
+        <td><%= order_details.item.name %></td>
+        <td><%= order_details.item.add_tax_price.to_s(:delimited) %></td>
+        <td><%= order_details.amount %></td>
+        <td><%= (order_details.item.add_tax_price*order_details.amount).to_s(:delimited) %></td>
+        <% @total += (order_details.item.add_tax_price*order_details.amount) %>
+        <td>
+          <%= form_with model: order_details,url:admin_order_path(order_details),local:true,method: :patch do |f| %>
+            <%= f.select :making_status,OrderDetail.making_statuses_i18n.invert, {prompt: false},class:"form-control-sm col-6" %>
+            <%= f.submit "更新", class:'btn btn-sm btn-success' %>
+          <% end %>
+        </td>
+      </tbody>
       <% end %>
-      <td><%= @total_amount %></td>
-      <td><%= @orderf.status_i18n %></td>
-    </tbody>
-  </table>
+    </table>
     </div>
+    <div class="col-3">
+    <table class="table table-bordered border-dark" style="-ms-writing-mode: tb-lr;writing-mode: vertical-lr;">
+      <thead>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">商品合計</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">送料</th>
+        <th style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;">請求金額合計</th>
+      </thead>
+      <tbody>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @total.to_s(:delimited) %>円</td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @order.postage %>円</td>
+        <td style="-ms-writing-mode : lr-tb; writing-mode : horizontal-tb; white-space : nowrap;"><%= @order.price.to_s(:delimited) %>円</td>
+      </tbody>
+    </table>
+    </div>
+  </div>
 </div>
+
 
